--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 :root {
-    --cor-de-fundo: #000000;
+    --cor-de-fundo: #a10000;
 }
 
-body{background-color: var(--cor-de-fundo);}
+body{
+    background-color: var(--cor-de-fundo);
+}
