--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,21 @@ body{
 
 h1 {
     background-color: #ff520e;
+} body {
+    background-color: bisque;
 }
+footer {
+    background-color: black;
+    color: white;
+}
+footer {
+    background-color: black;
+    color: white;
+    bottom:0;
+    position:fixed;
+    width:100%;
+}
+footer p{
+    text-align: center;
+    font-size: 0.6rem;
+}    height:2rem;    margin-top: 0,5rem;
