--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 h1 {
     background-color: #00ee14;
 } body {
-    background-color: bisque;
+    background-color: rgb(111, 43, 167);
 }
 footer {
     background-color: black;
