--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,33 @@ footer p{
     text-align: center;
     font-size: 0.6rem;
 }    height:2rem;    margin-top: 0,5rem;
+#container {
+    display:flex ;
+}
+.cartao {
+    margin: 1rem 1rem;
+}<div class="cartao__conteudo__pergunta">
+<p>O que é Java Script?</p>
+</div>                        
+<div class="cartao__conteudo__resposta">
+<p>O Java Script é uma linguagem de programação.</p>
+</div>
+<div class="cartao__conteudo__pergunta">
+    <p>O que é CSS?</p>
+</div>                        
+<div class="cartao__conteudo__resposta">
+    <p>O CSS é uma linguagem de estilização.</p>
+</div>
+.cartao 
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+}.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
+}
+
