--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,14 @@ footer p{
     flex-grow: 1;
     flex-basis: calc(33% -6rem);
 }
-
+<article class=".cartao">
+    <div class="cartao__conteudo">
+        <h3> Programação </h3>
+        <div class="cartao__conteudo__pergunta">
+            <p>O que é CSS?</p>
+        </div>                        
+        <div class="cartao__conteudo__resposta">
+            <p>O CSS é uma linguagem de estilização.</p>
+        </div>
+    </div>
+</article>
