--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@ h1 {
     background-color: rgb(111, 43, 167);
 }
 footer {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     color: white;
 }
 footer {
-    background-color: black;
+    background-color: rgb(51, 128, 55);
     color: white;
     bottom:0;
     position:fixed;
