--- a/styles.css
+++ b/styles.css
@@ -31,19 +31,7 @@ footer p{
 }
 .cartao {
     margin: 1rem 1rem;
-}<div class="cartao__conteudo__pergunta">
-<p>O que é Java Script?</p>
-</div>                        
-<div class="cartao__conteudo__resposta">
-<p>O Java Script é uma linguagem de programação.</p>
-</div>
-<div class="cartao__conteudo__pergunta">
-    <p>O que é CSS?</p>
-</div>                        
-<div class="cartao__conteudo__resposta">
-    <p>O CSS é uma linguagem de estilização.</p>
-</div>
-.cartao 
+}
 .cartao {
     margin: 1rem 1rem;
     background-color: aqua;
@@ -55,14 +43,3 @@ footer p{
     flex-grow: 1;
     flex-basis: calc(33% -6rem);
 }
-<article class=".cartao">
-    <div class="cartao__conteudo">
-        <h3> Programação </h3>
-        <div class="cartao__conteudo__pergunta">
-            <p>O que é CSS?</p>
-        </div>                        
-        <div class="cartao__conteudo__resposta">
-            <p>O CSS é uma linguagem de estilização.</p>
-        </div>
-    </div>
-</article>
